Pushing before socket configuration
