# app/Http/Controllers/MessagesController.php
@@ -8,6 +8,7 @@ use App\Models\Rooms;
 use App\Models\User;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Validator;
 use Throwable;
 
 class MessagesController extends Controller
@@ -20,17 +21,17 @@ class MessagesController extends Controller
     public function index()
     {
         $roomParticipants = MessageParticipants::where('user_id', auth()->id())->pluck('room_id')->toArray();
-        $rooms = Rooms::where('users_id', 'like', '%_'.auth()->id().'%')->where('users_id', 'like', '%'.auth()->id().'_%')->pluck('id')->toArray();
-        array_push($rooms, $roomParticipants);
+        $returnData = Rooms::whereIn('id', $roomParticipants)
+            ->with("participants")
+            ->orderBy('created_at','desc')
+            ->paginate(10);
 
-        $data = Rooms::whereIn('id', $rooms)->paginate(10);
-        /*
-        $rooms = Rooms::where('from', auth()->id())->orWhere('to', auth()->id())->paginate(10);
-        $rooms->map(function($room, $index) {
+        $returnData->map(function($room, $key) {
             $lastMessage = Messages::where('room_id', $room->id)->orderBy('created_at','desc')->first();
             $room->last_message = $lastMessage;
-        }); */
-        return (new ApiController())->ApiCreator($data);
+        });
+
+        return (new ApiController())->ApiCreator($returnData);
     }
 
     /**
@@ -41,11 +42,11 @@ class MessagesController extends Controller
     public function getMessages(int $id)
     {
         // $roomSecurity = Rooms::where('id', $id)->where('from', auth()->id())->orWhere('to',  auth()->id())->get();
-        $roomSecurity = MessageParticipants::where('room_id', $id)->AndWhere('user_id', auth()->id())->get();
+        $roomSecurity = MessageParticipants::where('room_id', $id)->where('user_id', auth()->id())->get();
         if (count($roomSecurity) === 0) {
             return (new ApiController())->ApiCreator('Busted!', true);
         }
-        $messages = Messages::where('room_id', $id)->orderBy('created_at','desc')->paginate(10);
+        $messages = Messages::where('room_id', $id)->with('user')->orderBy('created_at','desc')->paginate(10);
         return (new ApiController())->ApiCreator($messages);
     }
 
@@ -72,12 +73,12 @@ class MessagesController extends Controller
     public function create(Request $request)
     {
         $to = $request->to;
-        $isGroup = $request->isGroup || false;
-        $user = User::find($to);
-        if (!$user) {
-            return (new ApiController())->ApiCreator('User not found!', true);
-        }
+        $isGroup = $request->isGroup;
         if ($isGroup && is_array($to)) {
+            $user = User::whereIn('id', $to)->count();
+            if ($user === 0) {
+                return (new ApiController())->ApiCreator('Users not found!', true);
+            }
             $room = new Rooms();
             $room->name = $request->name;
             $room->is_group = $isGroup;
@@ -89,18 +90,21 @@ class MessagesController extends Controller
             $participants->is_admin = true;
             $participants->save();
 
-            foreach ($to as &$usr) {
+            for ($i = 0; $i < count($to); $i++){
                 $participants = new MessageParticipants();
                 $participants->room_id = $room->id;
-                $participants->user_id = $usr;
+                $participants->user_id = $to[$i]['id'];
                 $participants->is_admin = false;
                 $participants->save();
             }
-
-            $data = Rooms::find($room->id);
+            $data = Rooms::where('id', $room->id)->with('participants')->first();
             return (new ApiController())->ApiCreator($data);
-        } elseif(!$isGroup && is_string($to)) {
-            $newMessageControll = MessageParticipants::where('users_id', auth()->id() . '_' . $to)->orWhere('users_id', $to . '_' . auth()->id())->first();
+        } elseif(!$isGroup && is_integer($to)) {
+            $user = User::where('id',$to)->count();
+            if ($user === 0) {
+                return (new ApiController())->ApiCreator('User not found!', true);
+            }
+            $newMessageControll = Rooms::where('users_id', auth()->id() . '_' . $to)->orWhere('users_id', $to . '_' . auth()->id())->first();
             if (is_null($newMessageControll)) {
                 $room = new Rooms();
                 $room->is_group = false;
@@ -119,11 +123,10 @@ class MessagesController extends Controller
                 $participants->is_admin = false;
                 $participants->save();
 
-                $data = Rooms::find($room->id);
+                $data = Rooms::where('id', $room->id)->with('participants')->first();
                 return (new ApiController())->ApiCreator($data);
             } else {
-                $data = Rooms::find($newMessageControll->room_id);
-                return (new ApiController())->ApiCreator($data);
+                return (new ApiController())->ApiCreator($newMessageControll);
             }
         }
         return (new ApiController())->ApiCreator('Something went wrong!', true);
@@ -131,16 +134,23 @@ class MessagesController extends Controller
 
     public function sendMessage(Request $request)
     {
+        $validator = Validator::make($request->all(), [
+            'text' => 'required|string|min:1|max:400',
+            'roomId' => 'required',
+        ]);if ($validator->fails()) {
+        return (new ApiController())->ApiCreator($validator->errors()->all(), true);
+        }
         $text = $request->text;
-        $image = $request->image;
+        // $image = $request->image;
         $roomId = $request->roomId;
 
         $message = new Messages();
+        $message->user_id = $request->user()->id;
         $message->room_id = $roomId;
         $message->text = $text;
         $message->save();
 
-        return $message;
+        return (new ApiController())->ApiCreator($message);
     }
 
     /**
