# app/Http/Controllers/SwaggerController.php
@@ -22,17 +22,13 @@ namespace App\Http\Controllers;
  * )
  *
  * @OA\SecurityScheme(
- *     type="oauth2",
+ *     type="http",
  *     description="Use a global client_id / client_secret and your username / password combo to obtain a token",
  *     name="Password Based",
  *     in="header",
  *     scheme="bearer",
+ *     bearerFormat="JWT",
  *     securityScheme="bearerAuth",
- *     @OA\Flow(
- *         flow="password",
- *         tokenUrl="/oauth/token",
- *         scopes={}
- *     )
  * )
  *
  * @OA\Get(
@@ -41,9 +37,115 @@ namespace App\Http\Controllers;
  *     security={{"bearerAuth":{""}}},
  *     @OA\Response(response="200", description="An example resource")
  * )
- * @OA\Post(
+ *
+ * @OA\Put(
  *     tags={"Users"},
- *     path="/users/register",
+ *     path="/users/me",
+ *     security={{"bearerAuth":{""}}},
+ *      @OA\Parameter(
+ *          name="name",
+ *          description="Name and Surname",
+ *          required=false,
+ *          in="query",
+ *          @OA\Schema(
+ *              type="string"
+ *          )
+ *      ),
+ *     @OA\Parameter(
+ *          name="username",
+ *          description="User Name",
+ *          required=false,
+ *          in="query",
+ *          @OA\Schema(
+ *              type="string"
+ *          )
+ *      ),@OA\Parameter(
+ *          name="password",
+ *          description="Password",
+ *          required=false,
+ *          in="query",
+ *          @OA\Schema(
+ *              type="string"
+ *          )
+ *      ),@OA\Parameter(
+ *          name="email",
+ *          description="Email",
+ *          required=false,
+ *          in="query",
+ *          @OA\Schema(
+ *              type="string"
+ *          )
+ *      ),@OA\Parameter(
+ *          name="bio",
+ *          description="Users brief description",
+ *          required=false,
+ *          in="query",
+ *          @OA\Schema(
+ *              type="string"
+ *          )
+ *      ),@OA\Parameter(
+ *          name="avatar",
+ *          description="User avatar",
+ *          required=false,
+ *          in="query",
+ *          @OA\Schema(
+ *              type="file"
+ *          )
+ *      ),
+ *     @OA\Response(response="200", description="An example resource")
+ * )
+ *
+ * @OA\Get(
+ *     tags={"Users"},
+ *     path="/users/{id}",
+ *     security={{"bearerAuth":{""}}},
+ *      @OA\Parameter(
+ *          name="id",
+ *          description="Get user by user Id.",
+ *          required=true,
+ *          in="path",
+ *          @OA\Schema(
+ *              type="string"
+ *          )
+ *      ),
+ *     @OA\Response(response="200", description="An example resource")
+ * )
+ *
+ * @OA\Get(
+ *     tags={"Users"},
+ *     path="/users/@{username}",
+ *     security={{"bearerAuth":{""}}},
+ *      @OA\Parameter(
+ *          name="username",
+ *          description="Find user by username. Must use like '@<-username->'",
+ *          required=true,
+ *          in="path",
+ *          @OA\Schema(
+ *              type="string"
+ *          )
+ *      ),
+ *     @OA\Response(response="200", description="An example resource")
+ * )
+ *
+ * @OA\Get(
+ *     tags={"Search"},
+ *     path="/search",
+ *     security={{"bearerAuth":{""}}},
+ *      @OA\Parameter(
+ *          name="searchKey",
+ *          description="Find users by key.",
+ *          required=true,
+ *          in="query",
+ *          @OA\Schema(
+ *              type="string"
+ *          )
+ *      ),
+ *     @OA\Response(response="200", description="An example resource")
+ * )
+ *
+ * @OA\Post(
+ *     tags={"Auth"},
+ *     path="/register",
  *      @OA\Parameter(
  *          name="name",
  *          description="Name and Surname",
@@ -96,9 +198,10 @@ namespace App\Http\Controllers;
  *      ),
  *     @OA\Response(response="200", description="An example resource")
  * )
+ *
  * @OA\Post(
- *     tags={"Users"},
- *     path="/users/login",
+ *     tags={"Auth"},
+ *     path="/login",
  *     description="You can login with email or username.",
  *     @OA\Parameter(
  *          name="username",
@@ -129,9 +232,57 @@ namespace App\Http\Controllers;
  *      ),
  *     @OA\Response(response="200", description="An example resource")
  * )
+ *
  * @OA\Post(
- *     tags={"Users"},
+ *     tags={"Auth"},
  *     path="/users/logout",
+ *     security={{"bearerAuth":{""}}},
+ *     @OA\Response(response="200", description="An example resource")
+ * )
+ *
+ * @OA\Get(
+ *     tags={"Messages"},
+ *     path="/messages",
+ *     description="Get all message rooms.",
+ *     security={{"bearerAuth":{""}}},
+ *     @OA\Response(response="200", description="An example resource")
+ * )
+ *
+ * @OA\Post(
+ *     tags={"Messages"},
+ *     path="/messages/create",
+ *     description="Send a message.",
+ *     security={{"bearerAuth":{""}}},
+ *     @OA\RequestBody(
+ *         @OA\MediaType(
+ *             mediaType="application/json",
+ *             @OA\Schema(
+ *                 type="object",
+ *                 @OA\Property(
+ *                     property="isGroup",
+ *                     description="is this a group?",
+ *                     example="false",
+ *                     type="boolean"
+ *                 ),
+ *                 @OA\Property(
+ *                     property="name",
+ *                     description="If it is a group chat name it!",
+ *                     example="New Group Chat",
+ *                     type="string"
+ *                 ),
+ *              @OA\Property(
+ *                  property="to",
+ *                  type="array",
+ * *                @OA\Items(
+ *                      type="number",
+ *                      description="User Ids",
+ *                      @OA\Schema(type="number")
+ *                  ),
+ *                  description="Group participants ids"
+ *              )
+ *             )
+ *          )
+ *     ),
  *     @OA\Response(response="200", description="An example resource")
  * )
  *
