# app/Http/Controllers/UserController.php
@@ -66,28 +66,59 @@ class UserController extends Controller
      * @return JsonResponse
      */
     public function edit(Request $request) {
-        $data = Validator::make($request->all(), [
-            'name' => 'required|string|min:3|max:255',
-            'username' => 'required|string|min:3|max:32|alpha_dash|regex:/^[a-zA-Z0-9]+([._]?[a-zA-Z0-9]+)*$/u|unique:users',
-            'password' => 'required|string|min:6',
-            'bio' => 'string|min:3',
-            'email' => 'required|string|email|max:255|unique:users',
-        ]);
+        $update = User::find(auth()->id());
+        if ($update->username !== $request->username){
+            $data = Validator::make($request->all(), [
+                'name' => 'required|string|min:3|max:255',
+                'username' => 'required|string|min:3|max:32|alpha_dash|regex:/^[a-zA-Z0-9]+([._]?[a-zA-Z0-9]+)*$/u|unique:users',
+                'bio' => 'string|min:3',
+            ]);
+        }else {
+            $data = Validator::make($request->all(), [
+                'name' => 'required|string|min:3|max:255',
+                'bio' => 'string|min:3',
+            ]);
+        }
         if ($data->fails()) {
             return (new ApiController())->ApiCreator($data->errors()->all(), true);
         } else {
-            $user = new User();
-            $user->name = $request->name;
-            $user->username = $request->username;
-            $user->password = $request->password;
-            $user->email = $request->email;
-            $user->bio = $request->bio || '';
-            $user->avatar = $request->avatar && strlen($request->avatar) > 0 ? $request->avatar : 'noavatar';
-            $user->save();
+            $update->name = $request->name;
+            if ($update->username !== $request->username){
+                $update->username = $request->username;
+            }
+            $update->bio = $request->bio;
+            // $user->avatar = $request->avatar && strlen($request->avatar) > 0 ? $request->avatar : 'noavatar';
+            $update->save();
 
-            $data = $this->issueToken($user);
+            return (new ApiController())->ApiCreator($update);
+        }
+    }
 
-            return response($data, 200);
+    /**
+     * Update password
+     *
+     * @param Request $request
+     * @return JsonResponse
+     */
+    public function passwordReset(Request $request): JsonResponse
+    {
+        $user = \auth();
+        $password = User::find($user->id());
+        $data = Validator::make($request->all(), [
+            'old_password' => 'required',
+            'password' => 'confirmed|min:6|different:oldPassword',
+            'password_confirmation' => 'required_with:password|same:password',
+        ]);
+        if ($data->fails())
+        {
+            return (new ApiController())->ApiCreator($data->errors()->all(), true);
+        }
+
+        if (Hash::check($request->old_password, $password->password)) {
+            $update = User::where('id', $user->id())->update(['password' => bcrypt($request->password)]);
+            return (new ApiController())->ApiCreator(['success' => 'true']);
+        } else {
+            return (new ApiController())->ApiCreator(["Old password does not match."], true);
         }
     }
 
@@ -136,11 +167,37 @@ class UserController extends Controller
      * @return JsonResponse
      */
     public function getUserByUn(string $username) {
-        $users = User::where('username','like', $username . '%')->get();
-        if (count($users) === 0) {
+        $user = User::where('username', $username)->first();
+        if (is_null($user)) {
             return (new ApiController())->ApiCreator('User not found!', true);
         }
-        return (new ApiController())->ApiCreator($users);
+        return (new ApiController())->ApiCreator($user);
+    }
+
+    /**
+     * Get User By Username
+     *
+     * @param Request $request
+     * @return JsonResponse
+     */
+    public function searchUser(Request $request) {
+        $validator = Validator::make($request->all(), [
+            'searchKey' => 'required|string|min:3|max:50',
+        ]);if ($validator->fails()) {
+            return (new ApiController())->ApiCreator($validator->errors()->all(), true);
+        } else {
+            $users = User::where(function ($query) use($request){
+                    $query->where('username', 'like', '%' . $request->searchKey . '%')
+                        ->orWhere('name', 'like', '%' . $request->searchKey . '%');
+                })
+                ->where('id', '!=', $request->user()->id)
+                ->limit(20)
+                ->get();
+            if (count($users) === 0) {
+                return (new ApiController())->ApiCreator('No any users found!', true);
+            }
+            return (new ApiController())->ApiCreator($users);
+        }
     }
 
     /**
